# flashback

./: .env.example  .env.local.example  .gitignore  .output.txt  ARCHITECTURE_INDEX.md  ARCHITECTURE_PRINCIPLES.md  ARCHITECTURE_RECONCILIATION_OCT31.md  BUILD_POLICY.md  BUILD_SUCCESS.md  CARGO_WARNINGS_FIXED.md  CHAINCODE_DEPLOYMENT.md  CHAINCODE_INTEGRATION_SUMMARY.md  CHAINCODE_STRUCTURE_GUIDE.md  CHANGES_SUMMARY.md  CHANNELS_DEPLOYMENT_READY.txt  CHAT_FEATURE.md  CLARIFICATIONS_OCTOBER_30.md  CLEANUP_SESSION_SUMMARY.md  CLI_COVERAGE_SUMMARY.md  CLI_vs_UI_FEATURES.md  COMMANDS.md  COMPLETE_ARCHITECTURE_OVERVIEW.md  COMPLETE_DOCUMENTATION_PACKAGE.md  COMPLETION_CHECKLIST.md  COMPONENT_RESTRUCTURING.md  COMPONENT_TEST_POLICY.md  CREATED.md  Cargo.toml  DELIVERABLES.md  DEPLOYMENT_METHODS.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_ALL_CHANNELS.md  DEPLOY_CHANNELS_AND_CHAINCODES.md  DEPLOY_LIVE_MANUAL.sh  DEPLOY_VIA_API.md  DEPLOY_VIA_CONSOLE.md  DEPLOY_VIA_KALEIDO_CONSOLE.md  DOCS_INDEX.md  (+74 more)
.github/workflows/: deploy-server.yml  rust-ci.yml
__tests__/: cli-e2e.mjs
chaincode/: README.md
chaincode/games/: go.mod  go.sum  main.go
chaincode/movie/: go.mod  go.sum  models.go  movie.go
chaincode/tvshow/: go.mod  main.go
chaincode/voting/: go.mod  main.go
client/: .gitignore  Dockerfile  cypress.config.ts  package-lock.json  package.json  start-client.sh  start-server.sh  tsconfig.json
client/e2e/: wdio.multiremote.conf.ts
client/src/: apiTypes.ts  config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
client/src-tauri/capabilities/: migrated.json
client/src-tauri/icons/: README.md  icon.icns
client/src-tauri/src/: handlers.rs  http_server.rs  lib.rs  main.rs
client/src-tauri/src/cli/: commands.rs  mod.rs  repl.rs
client/src-tauri/src/commands/: fabric.rs  mod.rs
client/src-tauri/src/fabric/: ca_enrollment.rs  certificate.rs  client.rs  errors.rs  grpc_client.rs  mod.rs
client/src-tauri/~/.relay/: private.key  publicKeyHash.txt
client/test/: chat_section.cy.ts  dcc_chatroom.cy.ts  nav_menu.cy.ts  nav_transition.cy.ts  tab_persistence.cy.ts  theme_switcher.cy.ts  video_player.cy.ts
crates/fabric-cli/: Cargo.toml
crates/fabric-cli/src/: main.rs
crates/fabric-core/: Cargo.toml
crates/fabric-core/src/: crypto.rs  error.rs  fabric.rs  lib.rs  torrent.rs
cypress/: E2E_TEST_GUIDE.md
cypress/e2e/: app.cy.ts  chaincode.cy.ts  components.cy.ts  fabric-network.cy.ts  kaleido-live.cy.ts  use-case-1-browse-search.cy.ts  use-case-2-submit-content.cy.ts  use-case-3-moderation.cy.ts  use-cases.cy.ts
cypress/support/: e2e.ts
docs/: AI_AGENT_GUIDE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN_SUMMARY.md  ARCHITECTURE_REQUIREMENTS_UPDATE_OCT31.md  CA_ARCHITECTURE.md  CERTIFICATE_SECURITY_IMPLEMENTATION.md  CHAINCODE_DOCUMENTATION.md  CHANNEL_ARCHITECTURE_CLARIFICATION.md  CHAT_IMPLEMENTATION_SUMMARY.md  CLEANUP_STATUS.md  CLEANUP_SUMMARY.md  CLIENT_UI_COMPLETION.md  CLI_CODE_COVERAGE.md  COMMENT_OWNERSHIP_PERMISSIONS.md  COMPLETION_REPORT.md  DECENTRALIZED_GIT_PROTOCOL.md  DEVELOPMENT.md  DEVELOPMENT_RULES.md  DOCKER_SETUP.md  DOCUMENTATION_COMPLETION.md  DOCUMENTATION_SUMMARY.txt  E2E.md  FABRIC_DECISION_DOCUMENT.md  FABRIC_IMPLEMENTATION_GUIDE.md  FABRIC_IMPLEMENTATION_ROADMAP.md  FABRIC_NETWORK_SETUP.md  FABRIC_TAURI_API_BRIDGE.md  FEATURES_IMPLEMENTED.md  FEATURES_SPEC.md  FILE_MANIFEST.md  FILE_ROOT_DIRECTORY_CONFIG.md  FRIENDS_LIST_IMPLEMENTATION.md  FRONTEND_USAGE_GUIDE.md  GIT_HOOKS.md  GOSSIP_PROTOCOL_DESIGN.md  HEARTBEAT.md  HTTP_CACHING_DESIGN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  (+52 more)
docs/archive/: ARCHITECTURE_UPDATE.md  ARCHIVE_INDEX.md  CLEANUP_INDEX.md  CLEANUP_REPORT.md  COMPLETION_CHECKLIST.md  DOCUMENTATION_CATALOG.md  HANDLER_IMPLEMENTATION_GUIDE.md  HTTP_CACHING_COMPLETE.md  HTTP_LISTENER_IMPLEMENTATION.md  LEGACY_SCRIPTS.md  NEXT_STEPS.md  OCTOBER_31_SESSION_QUICK_GUIDE.md  PHASE_2_IMPLEMENTATION_CHECKLIST.md  PHASE_2_MASTER_INDEX.md  PHASE_2_NEXT_STEPS.md  PHASE_2_READY.md  README.md  RELAY_VS_PEER_QUICK_REFERENCE.md  REMOTEHOUSE_IMPLEMENTATION.md  SESSION_COMPLETION_SUMMARY.md  SESSION_SUMMARY_OCT_30_PHASE_2_CLARIFICATION.md  TASK_3_IMPLEMENTATION.md  TODO.md
example-repo/: README.md
example-repo/scripts/: browse.js  comment.js  insert.js  remove.js  search.js
fabric/: configtx.yaml  crypto-config.yaml  deploy-chaincode.sh  docker-compose.yml  enroll-admin.sh  setup.sh
fabric/tlscacerts/: ca-cert.pem
infra/: flashback-server.pem
infra/cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
scripts/: GIT_HOOKS_README.md  bump-versions.sh  check-kaleido-status.mjs  cleanup-autoscaling.sh  cli-e2e-remote.sh  cli-e2e.ps1  cli-e2e.sh  deploy-api.mjs  deploy-kaleido-live.mjs  deploy-live.mjs  deploy-network.mjs  deploy-rest-gateway.mjs  deploy-to-kaleido.js  docker-test.sh  e2e-common.sh  e2e-linux.sh  e2e-macos.sh  e2e-win.ps1  fabric-cli.ts  generate_keys_from_client.sh  list-chaincodes.mjs  list-channels.mjs  run-cli-tests.mjs  setup-git-hooks.sh  setup.sh  test-server-docker.sh  verify-all-channels-deployed.mjs
scripts/.docker-deprecated/: README.md  deploy-direct-cli.sh  deploy-direct.mjs  deploy-docker.sh  deploy-with-docker.mjs
scripts/git-hooks/: pre-commit
server/: .gitignore  Cargo.toml  Dockerfile  client-config.json  config.example.toml  config.toml  cypress.config.ts  package-lock.json  package.json  run_tests.sh  tsconfig.json
server/app/: page.tsx
server/db/: keyUtils.ts  models.ts
server/lib/: auth.ts  cert.ts  cleanup.ts  scriptExecutor.ts  validators.ts
server/scripts/: client-config.json  generate_keys_fixture.js
server/src/: main.rs  main.rs.backup
server/tests/: regression.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: KeyManagement.test.tsx  config.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: KeyManagement.tsx  NetworkConnection.tsx  TorrentManager.tsx
src/lib/: api.ts  (+4 more)
wdio-logs/: certA.pem  certB.pem
(+110 files in other folders)
