[package]
name = "client"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-window-state = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
local-ip-address = "0.6"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
hex = "0.4"
rcgen = "0.12"
ring = "0.17"
x509-cert = { version = "0.2", features = ["builder", "pem"] }
der = "0.7"
const-oid = "0.9"
pem-rfc7468 = "0.7"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
x509-parser = "0.15"
rustls = "0.22"
pem = "3.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "flashback-cli"
path = "src/bin/cli.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]
