[package]
name = "fabric-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fabric"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
fabric-core = { path = "../fabric-core" }

# For CLI interactive features
dialoguer = "0.11"
colored = "2.1"
prettytable-rs = "0.10"

# Utilities
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
