[package]
name = "fabric-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# UUID and time
uuid = "1.6"
chrono = { version = "0.4", features = ["serde"] }

# Hyperledger Fabric
# fabric-client = "0.4"
# fabric-protobuf = "0.4"
# grpc = "0.15"
# grpc-protobuf = "0.15"

# Cryptography
openssl = "0.10"
x509-certificate = "0.23"
ring = "0.17"
rustls = "0.21"
pkcs8 = "0.10"
der = "0.7"
base64 = "0.21"

# Async utilities
async-trait = "0.1"

# WebTorrent/Torrent support
# webtorrent = "0.1"
bendy = "0.3"

[dev-dependencies]
tokio-test = "0.4"
